fix long list overflowing screen

--- a/src/components/boardViewer/boardViewerList.module.css
+++ b/src/components/boardViewer/boardViewerList.module.css
@@ -11,6 +11,10 @@
     gap: 10px;
     user-select: none;
     align-self: start;
+    max-height: 100%;
+    max-height: -moz-available;
+    max-height: -webkit-fill-available;
+    max-height: fill-available;
 }
 
 .draggingPlaceholder {
